<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="butt1">Play</string>
    <string name="butt2">Stop</string>
    <string name="butt3">Pause</string>
    <string name="butt4">Exit</string>
    <string name="butt5">Close</string>

</resources>
