<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lijun.service.PlayMusicService" >

    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/butt1"
        android:id="@+id/play"
        style="?android:attr/borderlessButtonStyle"/>
    
     <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/butt2"
        android:id="@+id/stop"
         style="?android:attr/borderlessButtonStyle"/>
        
     <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/butt3"
        android:id="@+id/pause"
         style="?android:attr/borderlessButtonStyle"/>
            
     <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/butt4"
        android:id="@+id/exit"
         style="?android:attr/borderlessButtonStyle"/>
     
      <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/butt5"
        android:id="@+id/close"
         style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>
